# simulacion-ia-educacion

./: .gitignore  README.md  pyproject.toml
docs/processes/: as-is.bpmn  as-is_to-be.bpmn  to-be.bpmn
src/simulacion_educativa/: ai_personalized_scenario.py  cohort_factory.py  config.py  entities.py  launcher.py  main.py  metrics.py  runner.py  technology_scenario.py  traditional_scenario.py
src/simulacion_educativa/ml/: predictor.py  preprocessing.py  test_predictor.py  train_model.py
src/simulacion_educativa/visualization/: __init__.py  final_dashboard.py  runtime.py  salabim_view.py  styles.py
